Applied PR comments